martina smiljan- parcijalni ispit

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Harry Potter i Kamen mudraca</title>
     <link rel="stylesheet" href="./index.css">
 </head>
+<header><h1>Martina Smiljan</h1></header>
 <body style="padding:40px; width: 600px; margin: auto; text-align: center">
 <h1>Harry Potter i Kamen mudraca</h1>
 <img src="assets/HP1.jpg" title="Harry Potter" lang="en" alt="Harry Potter">
